# tuxclocker-cli

./: Makefile.am  README.md  configure.ac  meson.build  meson_options.txt
lib/: Makefile.am  libtuxclocker.h  libtuxclocker_amd.c  libtuxclocker_amd.h  meson.build
lib/amd/: libtuxclocker_amd.c  libtuxclocker_amd.h  meson.build
lib/nvidia/: libtuxclocker_nvidia.c  libtuxclocker_nvidia.h  meson.build
src/: Makefile.am  amd_functions.c  amd_functions.h  meson.build  nvidia_functions.c  nvidia_functions.h  tuxclocker-cli.c  tuxclocker-cli.h  utils.c  utils.h
